# vertical-segmentation

./: CMakeLists.txt  README.md  package.xml
config/: params.yaml
include/segmentation_filter/: segmentation_filter.hpp
launch/: segmentation_launch.py
src/: segmentation_filter.cpp  segmentation_filter_node.cpp
